Добавил блок тренировок и конкретной программы

--- a/assets/style/css-variables.less
+++ b/assets/style/css-variables.less
@@ -25,6 +25,7 @@
     --gm-colors-black-alpha-20: @dark002;
 
     --gm-colors-white: @light;
+    --gm-colors-white-alpha-800: fade(@light, 80%);
     --gm-colors-white-alpha-400: fade(@light, 40%);
 
     --gm-colors-accent: @purple;
