--- a/assets/style/main.less
+++ b/assets/style/main.less
@@ -36,9 +36,9 @@ input:focus {
 }
 
 .vue-notification {
-    margin: 0 5px 5px;
-    padding: 10px;
-    font-size: 12px;
+    margin: 15px 15px 5px;
+    padding: 15px;
+    font-size: 15px;
     color: #ffffff;
     background: #44A4FC;
     border-left: 5px solid #187FE7;
@@ -48,7 +48,7 @@ input:focus {
         top: 10px;
         right: 0;
     }
-    
+
     &.success {
         background: var(--gm-main-colorfull-background-color);
         border-left-color: #42A85F;
