--- a/assets/style/variables.less
+++ b/assets/style/variables.less
@@ -7,7 +7,7 @@
 @light: #FFFFFF;
 @gray: #646270;
 @dark: #141029;
-@darkGreen: #00b585ad;
+@darkGreen: #00b585;
 @purple: #9c42f5;
 @darkPurple: #1b0a52;
 @grayB: #423F52;
