Добавлена возможность добавление своего комплекса упражнений

--- a/assets/style/main.less
+++ b/assets/style/main.less
@@ -45,9 +45,10 @@ input:focus {
     border-left: 5px solid #187FE7;
 
     &-group {
-        position: absolute;
+        position: fixed;
         top: 10px;
         right: 0;
+        z-index: 999;
     }
 
     &.success {
