--- a/assets/style/css-variables.less
+++ b/assets/style/css-variables.less
@@ -35,11 +35,13 @@
     --gm-colors-accent-alpha-50: fade(@purple, 5%);
     --gm-color-accent-alpha-40: fade(@purple, 4%);
     --gm-colors-primary: @primary;
+
     --gm-colors-success: @success;
     --gm-colors-warning: @warning;
     --gm-colors-error: @error;
     --gm-color-error-alpha-70: fade(@error, 7%);
     --gm-color-error-alpha-40: fade(@error, 4%);
+
     --gm-colors-danger: @danger;
     --gm-color-danger-alpha-40: fade(@danger, 4%);
     --gm-colors-blue: @blue;
@@ -56,6 +58,9 @@
     --gm-main-gradient-background: linear-gradient(90deg, @darkGreen 0%, rgb(187, 249, 0) 100%);
     --gm-main-warning-background-color: @warningBackground;
     --gm-main-colorfull-background-color: @darkGreen;
+    --gm-main-colorfull-background-color-alpha-600: fade(@darkGreen, 60%);
+    --gm-main-colorfull-background-color-alpha-100: fade(@darkGreen, 10%);
+    --gm-main-colorfull-background-color-alpha-50: fade(@darkGreen, 5%);
 
     --gm-shadow-general-box: 2px 4px 20px fade(#000, 10%);
 
